<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Appearance Category -->
    <PreferenceCategory
        app:key="appearance_category"
        app:title="@string/appearance_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:summary="@string/theme_summary"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="0"
            app:icon="@drawable/ic_theme"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            app:key="font_size"
            app:title="@string/font_size"
            app:summary="@string/font_size_summary"
            app:defaultValue="17"
            app:min="12"
            app:max="24"
            app:showSeekBarValue="true"
            app:icon="@drawable/ic_text_size" />

        <SeekBarPreference
            app:key="line_spacing"
            app:title="@string/line_spacing"
            app:summary="@string/line_spacing_summary"
            app:defaultValue="18"
            app:min="10"
            app:max="30"
            app:showSeekBarValue="true"
            app:icon="@drawable/ic_line_spacing" />

        <SwitchPreferenceCompat
            app:key="reading_mode"
            app:title="@string/reading_mode"
            app:summary="@string/reading_mode_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_reading_mode" />

    </PreferenceCategory>

    <!-- Editor Category -->
    <PreferenceCategory
        app:key="editor_category"
        app:title="@string/editor_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="syntax_highlighting"
            app:title="@string/syntax_highlighting"
            app:summary="@string/syntax_highlighting_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_code" />

        <ListPreference
            app:key="code_block_style"
            app:title="@string/code_block_style"
            app:summary="@string/code_block_style_summary"
            app:entries="@array/code_block_style_entries"
            app:entryValues="@array/code_block_style_values"
            app:defaultValue="rounded"
            app:icon="@drawable/ic_code"
            app:dependency="syntax_highlighting" />

        <SwitchPreferenceCompat
            app:key="auto_scroll_outline"
            app:title="@string/auto_scroll_outline"
            app:summary="@string/auto_scroll_outline_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_outline" />

        <SwitchPreferenceCompat
            app:key="show_line_numbers"
            app:title="@string/show_line_numbers"
            app:summary="@string/show_line_numbers_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_numbers" />

    </PreferenceCategory>

    <!-- File Browser Category -->
    <PreferenceCategory
        app:key="file_browser_category"
        app:title="@string/file_browser_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="start_location"
            app:title="@string/start_location"
            app:summary="@string/start_location_summary"
            app:entries="@array/start_location_entries"
            app:entryValues="@array/start_location_values"
            app:defaultValue="downloads"
            app:icon="@drawable/ic_folder" />

        <SwitchPreferenceCompat
            app:key="show_hidden_files"
            app:title="@string/show_hidden_files"
            app:summary="@string/show_hidden_files_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_visibility" />

        <SwitchPreferenceCompat
            app:key="sort_folders_first"
            app:title="@string/sort_folders_first"
            app:summary="@string/sort_folders_first_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_sort" />

        <ListPreference
            app:key="file_sort_order"
            app:title="@string/file_sort_order"
            app:summary="@string/file_sort_order_summary"
            app:entries="@array/file_sort_order_entries"
            app:entryValues="@array/file_sort_order_values"
            app:defaultValue="name_asc"
            app:icon="@drawable/ic_sort" />

    </PreferenceCategory>

    <!-- Accessibility Category -->
    <PreferenceCategory
        app:key="accessibility_category"
        app:title="@string/accessibility_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="high_contrast"
            app:title="@string/high_contrast"
            app:summary="@string/high_contrast_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_contrast" />

        <SwitchPreferenceCompat
            app:key="large_touch_targets"
            app:title="@string/large_touch_targets"
            app:summary="@string/large_touch_targets_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_touch" />

        <SwitchPreferenceCompat
            app:key="voice_feedback"
            app:title="@string/voice_feedback"
            app:summary="@string/voice_feedback_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_voice" />

    </PreferenceCategory>

    <!-- Advanced Category -->
    <PreferenceCategory
        app:key="advanced_category"
        app:title="@string/advanced_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="debug_mode"
            app:title="@string/debug_mode"
            app:summary="@string/debug_mode_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_debug" />

        <Preference
            app:key="cache_size"
            app:title="@string/cache_size"
            app:summary="@string/cache_size_summary"
            app:icon="@drawable/ic_storage" />

        <Preference
            app:key="export_settings"
            app:title="@string/export_settings"
            app:summary="@string/export_settings_summary"
            app:icon="@drawable/ic_export" />

        <Preference
            app:key="import_settings"
            app:title="@string/import_settings"
            app:summary="@string/import_settings_summary"
            app:icon="@drawable/ic_import" />

    </PreferenceCategory>

    <!-- Actions Category -->
    <PreferenceCategory
        app:key="actions_category"
        app:title="@string/actions"
        app:iconSpaceReserved="false">

        <Preference
            app:key="about"
            app:title="@string/about"
            app:summary="@string/about_summary"
            app:icon="@drawable/ic_info" />

        <Preference
            app:key="reset_settings"
            app:title="@string/reset_settings"
            app:summary="@string/reset_settings_summary"
            app:icon="@drawable/ic_reset" />

    </PreferenceCategory>

</PreferenceScreen>