<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <!-- Primary actions - always visible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_document"
        android:contentDescription="@string/search_document"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    
    <item
        android:id="@+id/action_outline"
        android:icon="@drawable/ic_outline"
        android:title="@string/toggle_outline"
        android:contentDescription="@string/toggle_outline"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open"
        android:title="@string/open_file"
        android:contentDescription="@string/open_file"
        app:showAsAction="ifRoom" />
    
    <!-- Secondary actions - overflow menu -->
    <item
        android:id="@+id/action_reading_mode"
        android:icon="@drawable/ic_reading_mode"
        android:title="@string/reading_mode"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/export_document"
        app:showAsAction="never" />
    
    <!-- Settings submenu -->
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/preferences">
        
        <menu>
            <item
                android:id="@+id/action_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/theme_settings" />
            
            <item
                android:id="@+id/action_text_size"
                android:icon="@drawable/ic_text_size"
                android:title="@string/text_size" />
            
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
        
    </item>
    
    <!-- Help and info -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"
        app:showAsAction="never" />
        
</menu>